Align plugin workflows with structured planning contracts
- validate prompt placeholders while preserving resource URI templates
- add plan/apply navigation and rendered continuation context for MCP plugins
- provide algorithm recommendations and property requirements for readwrite, shadow, and sharding workflows
- decompose sharding planning requests, services, and resource handlers with focused tests
- update Speckit tasks and MCP workflow documentation